NFCKT-999 FailedReject not threadsafe